log
Thu Mar 12 07:15:15 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
affb726
Thu Mar 19 07:23:17 PM UTC 2026: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   47 |    while(elemento <= 10)
      |    ^~~~~
exercises.c:49:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   49 |       elemento++;
      |       ^~~~~~~~
cc1: all warnings being treated as errors
6b5dcb7
Thu Mar 19 07:23:58 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
009feba
Thu Mar 19 07:33:21 PM UTC 2026: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:73:12: error: ‘elemento’ undeclared (first use in this function)
   73 |    (void *)elemento = first(lista);
      |            ^~~~~~~~
exercises.c:73:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:73:29: error: ‘lista’ undeclared (first use in this function)
   73 |    (void *)elemento = first(lista);
      |                             ^~~~~
c059e5f
Thu Mar 19 07:33:52 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:73:12: error: ‘elemento’ undeclared (first use in this function)
   73 |    (void *)elemento = first(L);
      |            ^~~~~~~~
exercises.c:73:12: note: each undeclared identifier is reported only once for each function it appears in
8cf4919
Thu Mar 19 07:35:12 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 20/70
399ce3e
Thu Mar 19 07:46:42 PM UTC 2026: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:4: error: expected ‘,’ or ‘;’ before ‘while’
   62 |    while(elemento != NULL){
      |    ^~~~~
exercises.c:60:9: error: unused variable ‘elemento’ [-Werror=unused-variable]
   60 |    int* elemento = first(L);
      |         ^~~~~~~~
cc1: all warnings being treated as errors
38ff223
Thu Mar 19 07:47:02 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:12: error: invalid operands to binary * (have ‘int’ and ‘int *’)
   63 |       suma *= elemento;
      |            ^~
a85bc3a
